# BackupTool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml
backuptool/: app.py  models.py
backuptool/instance/: database.sqlite3
backuptool/templates/: base.html  login.html
