[project]
name = "backuptool"
version = "0.0.0b"
description = "Self-hosted service that performs scheduled file backups, keeps versioned archives, and syncs them to multiple storage destinations for reliable, automated protection."
authors = [
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)",
    "boto3 (>=1.42.8,<2.0.0)",
    "paramiko (>=4.0.0,<5.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-bootstrap (>=3.3.7.1,<4.0.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
